# OpenLogi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  devenv.nix  prek.toml  release-plz.toml
.github/workflows/: ci.yml  nix.yml  release-plz.yml  release.yml  windows-sign-dryrun.yml
crates/openlogi-agent/: Cargo.toml
crates/openlogi-agent-core/: Cargo.toml
crates/openlogi-agent-core/src/: hardware.rs  hook_runtime.rs  ipc.rs  orchestrator.rs
crates/openlogi-agent-core/src/watchers/: gesture.rs
crates/openlogi-agent-core/tests/: wire_format.rs
crates/openlogi-agent/src/: launch_agent.rs  main.rs  self_restart.rs  server.rs  takeover.rs
crates/openlogi-cli/: Cargo.toml
crates/openlogi-cli/src/cmd/diag/: lighting.rs  mod.rs
crates/openlogi-core/: Cargo.toml
crates/openlogi-core/examples/: inject_action.rs
crates/openlogi-core/src/: binding.rs  config.rs  device.rs  paths.rs
crates/openlogi-gui/: Cargo.toml
crates/openlogi-gui/locales/: app.yml
crates/openlogi-gui/src/: app.rs  app_assets.rs  app_menu.rs  hardware.rs  hook_runtime.rs  i18n.rs  ipc_client.rs  main.rs  state.rs
crates/openlogi-gui/src/asset/: images.rs  mod.rs  paths.rs  sync.rs
crates/openlogi-gui/src/components/: dpi_panel.rs  mod.rs
crates/openlogi-gui/src/mouse_model/: geometry.rs  mod.rs  picker.rs  view.rs
crates/openlogi-gui/src/platform/: CLAUDE.md  launch_agent.rs  mod.rs  permissions.rs  single_instance.rs  tray.rs  updater.rs
crates/openlogi-gui/src/state/: bindings.rs  devices.rs  dpi.rs
crates/openlogi-gui/src/watchers/: foreground_app.rs  gesture.rs  inventory.rs  mod.rs
crates/openlogi-gui/src/windows/: about.rs  add_device.rs  mod.rs  settings.rs  update_consent.rs
crates/openlogi-hid/: Cargo.toml
crates/openlogi-hid/src/: inventory.rs  pairing.rs  route.rs  smartshift.rs  transport.rs  write.rs
crates/openlogi-hidpp/: Cargo.toml
crates/openlogi-hidpp/src/: channel.rs
crates/openlogi-hook/: Cargo.toml
crates/openlogi-hook/gnome-shell-extension/: README.md
crates/openlogi-hook/gnome-shell-extension/openlogi-frontmost@openlogi.dev/: extension.js  metadata.json
crates/openlogi-hook/src/: lib.rs  linux.rs  macos.rs
crates/openlogi-hook/src/linux/: gnome_shell.rs  wlr_foreign_toplevel.rs
docs/: CODE_OF_CONDUCT.md  DEVELOPMENT.md  INSTALL-linux.md
nix/: package.nix  refresh-cargo-hash.sh
packaging/linux/: nfpm.yaml
packaging/linux/desktop/: openlogi.desktop
packaging/linux/systemd/: openlogi-agent.service
packaging/linux/udev/: 70-openlogi.rules
packaging/windows/: OpenLogi.wxs
udev/: 70-openlogi.rules
xtask/src/: linux.rs  main.rs  manifest.rs
