[package]
name = "openlogi-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLogi background agent — headless, always-on owner of the input hook, HID++ device I/O, and (later) the menu-bar tray."
# Distributed as a login-item helper inside the bundled .app; never published.
publish = false

[[bin]]
name = "openlogi-agent"
path = "src/main.rs"

[dependencies]
openlogi-agent-core = { path = "../openlogi-agent-core" }
openlogi-core = { path = "../openlogi-core" }
openlogi-hid = { path = "../openlogi-hid" }
openlogi-hook = { path = "../openlogi-hook" }
tarpc = { version = "0.37", features = ["serde1", "serde-transport", "serde-transport-bincode", "tokio1", "unix"] }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util"] }
futures = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
